<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="30dp"
    tools:context=".DetailPengunjung">

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nama"
        android:textSize="40sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtNik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nik"
        android:textSize="15sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/alamat"
        android:textSize="15sp"
        android:textStyle="bold" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:layout_editor_absoluteY="94dp">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:onClick="panggilanWA"
            android:text="@string/hubungi_wa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:layout_constraintVertical_bias="0.514" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="KirimEmail"
            android:text="@string/hubungi_email"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.341"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/labelTujuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="32dp"
            android:text="@string/tujuan"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTujuan"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/jenguk_bu_rw"
            app:layout_constraintStart_toEndOf="@+id/labelTujuan"
            app:layout_constraintTop_toBottomOf="@+id/labelTujuan" />

        <TextView
            android:id="@+id/labelKontakPengunjung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:text="@string/kontak_pengunjung"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/labelTujuan"
            app:layout_constraintTop_toBottomOf="@+id/txtTujuan" />

        <TextView
            android:id="@+id/txtNomor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/no_hp"

            app:layout_constraintEnd_toEndOf="@+id/labelKontakPengunjung"
            app:layout_constraintHorizontal_bias="0.135"
            app:layout_constraintStart_toStartOf="@+id/labelKontakPengunjung"
            app:layout_constraintTop_toBottomOf="@+id/labelKontakPengunjung" />

        <TextView
            android:id="@+id/txtTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_11_04_2020"
            app:layout_constraintBottom_toBottomOf="@+id/labelTujuan"
            app:layout_constraintStart_toEndOf="@+id/labelTujuan"
            app:layout_constraintTop_toTopOf="@+id/labelTujuan"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="@+id/txtNomor"
            app:layout_constraintTop_toBottomOf="@+id/txtNomor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/kembali"
        android:text="@string/kembali"
        android:onClick="batal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>